styles/style.css
body {
    width: 100vw;
    min-height: 100vh;
    height: 100%;
    padding-top: 105px !important;
    padding-bottom: 85px !important;
    padding-top: 105px;
    padding-bottom: 85px;
    background-image: url("../images/background.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

/* Navbar style */
a.nav-link {
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 0;
}

.icon-text {
    display: block;
}

#logo {
    width: 75px;
    height: auto;
}

/* ------------ */

.primary {
    background-color: #a0d070;
}

.real-event,
.real-person {
    width: 45%;
    font-size: 0.75rem;
    display: inline-block;
    margin-left: 0.8rem;
    margin-right: 0.6rem;
    vertical-align: top;
}

.real-event a,
.real-person a {
    color: black;
    text-decoration: none;
}

.real-event img,
.real-person img {
    width: 100%;
    height: 175px;
    object-fit: cover;
    border-radius: 2%;
    margin-bottom: 1rem;
}

.real-event .time,
.real-event .name,
.real-person .name {
    font-size: 0.9rem;
    font-weight: 500;
    line-height: 0.5rem;
}

.real-event .left,
.real-person .mutual {
    color: red;
}

.real-event .attendee,
.real-person .joined-event {
    font-size: 0.65rem;
}

.text-cut {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-box-orient: vertical;
}

#activity-go-here {
    display: flex;
    justify-content: center;
}

.card {
    width: 90vw;
    margin: auto;
    margin-bottom: 10px;
    margin-top: 10px;
    justify-content: center;
    background: rgba(255, 255, 255, 0.7);
}

.btn-theme {
    background-color: #a0d070;
    color: black;
}

.btn.disabled {
    background-color: #C6E4A0;
}

.btn.disabled:active {
    outline-color: black;
}

h1 {
    text-align: center;
}

.congrats {
    width: 80%;
    margin: 10%;
    text-align: center;
    justify-items: center;
}

.planet {
    width: 40%;
    align-self: center;
    margin-top: 5%;
}

.firebaseui-title {
    color: black;
}

.firebaseui-link {
    color: #a3d366;
}

.mdl-button--raised.mdl-button--colored {
    background: #a3d366;
}

.firebaseui-container {
    border-radius: 20px 50px;
    margin-top: 5%;
}

#firebaseui-auth-container {
    width: 80vw;
    margin: 10vw;
}

.firebaseui-textfield.mdl-textfield .firebaseui-label::after {
    background-color: #a3d366;
}

.mdl-button--raised.mdl-button--colored:active {
    background-color: #C6E4A0;
}

.mdl-button--raised.mdl-button--colored:hover {
    background-color: #C6E4A0;
}

.overlay {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(0, 0, 0, 0.6);
    transition: opacity 500ms;
    visibility: hidden;
    opacity: 0;
}

.overlay:target {
    visibility: visible;
    opacity: 1;
}

.popup {
    margin: 30% auto;
    padding: 10%;
    background: white;
    border-radius: 20px;
    width: 80%;
    position: relative;
    transition: all 1s ease-in-out;
}

.popup h2 {
    margin-top: 0;
    color: #333;
    font-family: Tahoma, Arial, sans-serif;
}

.popup .close {
    position: absolute;
    top: 20px;
    right: 30px;
    transition: all 200ms;
    font-size: 30px;
    font-weight: bold;
    text-decoration: none;
    color: #333;
}

.popup .close:hover {
    color: #06D85F;
}

.popup .content {
    max-height: 30%;
    overflow: auto;
}

#points-card {
    font-size: 16pt;
    text-align: center;
    margin: 5%;
}

#points-card {
    font-size: 16pt;
    text-align: center;
    margin: 5%;
}

#eventName::placeholder {
    font-size: 1.5rem;
    padding-top: 0.5rem;
}

#levelProgress {
    text-align: center;
    margin-bottom: 0;
    font-weight: bold;
}

.users-card {
    width: 360px;
}

.users-card-img {
    height: 200px;
    width: 200px;
    margin-top: 50px;
}

.card-username {
    font-size: 16pt;
    font-weight: bold;
}

.add-friend-btn {
    float: right;
}

.users-rank-badge {
    position: absolute;
    width: 100px;
    right: 10px;
    top: 10px;
}

.btn {
    background-color: #198754 !important;
}

.friends-btn {
    /* position: absolute; */
    right: 0%;
    margin: 10px;
    margin-left: 72vw;
}

